updates to introduction slide

--- a/slides/intro_notes-2022.html
+++ b/slides/intro_notes-2022.html
@@ -9,9 +9,9 @@
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
-<link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
+<link rel="stylesheet" href="../../reveal.js-fork/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js-fork/dist/theme/moon.css" id="theme"/>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
@@ -38,8 +38,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org4b5b3dc">
-<h2 id="org4b5b3dc">Navigation instructions</h2>
+<section id="slide-org120f630">
+<h2 id="org120f630">Navigation instructions</h2>
 <ul>
 <li>Press <a class="hide-on-pdf" onclick="document.location =
   '?print-pdf';" id="PrintButton"><i class="fa fa-print"></i></a> to
@@ -53,8 +53,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org8d5b9eb">
-<h2 id="org8d5b9eb">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgcc28487">
+<h2 id="orgcc28487">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -80,8 +80,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org37388f3">
-<h2 id="org37388f3">Overview</h2>
+<section id="slide-org67ff5da">
+<h2 id="org67ff5da">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Umair Jamal, Anthony Shek, and Tom Stavert</li>
@@ -159,8 +159,8 @@ course.
 </section>
 </section>
 <section>
-<section id="slide-orgd5db985">
-<h2 id="orgd5db985">Components of assessment</h2>
+<section id="slide-orgdac9901">
+<h2 id="orgdac9901">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -234,8 +234,8 @@ latter half of semester 2.
 </section>
 </section>
 <section>
-<section id="slide-orgddec170">
-<h2 id="orgddec170">Key learning objectives</h2>
+<section id="slide-orgbc097d1">
+<h2 id="orgbc097d1">Key learning objectives</h2>
 <ul>
 <li>Problem solving</li>
 <li>Mathematics</li>
@@ -304,8 +304,8 @@ solved analytically.
 </section>
 </section>
 <section>
-<section id="slide-orgd28aba7">
-<h2 id="orgd28aba7">Balances</h2>
+<section id="slide-orgbe4eb14">
+<h2 id="orgbe4eb14">Balances</h2>
 <div>
 \begin{align*}
 {\rm accumulation} &= {\rm in~flow} - {\rm out~flow} + {\rm generation}
@@ -338,17 +338,17 @@ and
 </section>
 </section>
 <section>
-<section id="slide-orgdb4a42f">
-<h2 id="orgdb4a42f">Python programming</h2>
+<section id="slide-org544c179">
+<h2 id="org544c179">Python programming</h2>
 
-<div id="orgb8b9c6c" class="figure">
+<div id="org30edc6d" class="figure">
 <p><img src="./intro/side1half.jpg" alt="side1half.jpg" />
 </p>
 </div>
 
 <div class="column" style="float:left; width:30%">
 
-<div id="orgeb32081" class="figure">
+<div id="orgb681598" class="figure">
 <p><img src="./intro/casio_350_calculator_1512286180_ab688b83.jpg" alt="casio_350_calculator_1512286180_ab688b83.jpg" height="400" />
 </p>
 </div>
@@ -356,7 +356,7 @@ and
 
 <div class="column" style="float:right; width:70%">
 
-<div id="org5ede08e" class="figure">
+<div id="org3574e77" class="figure">
 <p><img src="./intro/code_cell.png" alt="code_cell.png" height="400" />
 </p>
 </div>
@@ -383,8 +383,8 @@ and
 </section>
 </section>
 <section>
-<section id="slide-org56eae19">
-<h2 id="org56eae19">Prerequisites</h2>
+<section id="slide-orgd305657">
+<h2 id="orgd305657">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -440,8 +440,8 @@ that you are confident that you understand them thoroughly.
 </section>
 </section>
 <section>
-<section id="slide-org442c4a9">
-<h2 id="org442c4a9">Schedule</h2>
+<section id="slide-orgddb1776">
+<h2 id="orgddb1776">Schedule</h2>
 <ul>
 <li>Weeks 1-2: Python and its applications</li>
 <li>Weeks 3-5: Differential balances</li>
@@ -505,8 +505,8 @@ will be held on the Wednesday of week 11.
 </section>
 </section>
 <section>
-<section id="slide-org428e64e">
-<h2 id="org428e64e">Format</h2>
+<section id="slide-org984677c">
+<h2 id="org984677c">Format</h2>
 <ul>
 <li>tutorial worksheets
 <ul>
@@ -617,12 +617,12 @@ able to use these tools you have developed in your further career.
 </section>
 </section>
 <section>
-<section id="slide-org4443081">
-<h2 id="org4443081">Useful links</h2>
+<section id="slide-orgdc86661">
+<h2 id="orgdc86661">Useful links</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a>
 <ul>
-<li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595#section-9">https://classes.myplace.strath.ac.uk/course/view.php?id=21595#section-9</a></li>
+<li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">https://classes.myplace.strath.ac.uk/course/view.php?id=21595</a></li>
 
 </ul></li>
 <li><a href="https://strath.zoom.us/j/97497583844">Zoom</a>
@@ -660,8 +660,8 @@ whole.
 </section>
 </section>
 <section>
-<section id="slide-org6f95d00">
-<h2 id="org6f95d00">Additional resources</h2>
+<section id="slide-orgcfcbfaa">
+<h2 id="orgcfcbfaa">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
@@ -720,8 +720,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org68d88aa">
-<h2 id="org68d88aa">Questions?</h2>
+<section id="slide-orgddf1935">
+<h2 id="orgddf1935">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
@@ -748,7 +748,7 @@ this semester.  Thank you.
 </section>
 </div>
 </div>
-<script src="../../reveal.js/dist/reveal.js"></script>
+<script src="../../reveal.js-fork/dist/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
