--- a/slides/intro_notes-2022.html
+++ b/slides/intro_notes-2022.html
@@ -37,7 +37,7 @@
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
-<section>
+<!---section>
 <section id="slide-org120f630">
 <h2 id="org120f630">Navigation instructions</h2>
 <ul>
@@ -51,7 +51,7 @@ the bottom right corner of the page to navigate the presentation.</li>
 </ul>
 
 </section>
-</section>
+</section--->
 <section>
 <section id="slide-orgcc28487">
 <h2 id="orgcc28487">CP213: Applied mathematics and problem solving</h2>
