updates to introduction slide

--- a/slides/intro_notes-2023.html
+++ b/slides/intro_notes-2023.html
@@ -38,8 +38,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgbbcfd89">
-<h2 id="orgbbcfd89">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org5877788">
+<h2 id="org5877788">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -65,8 +65,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-orgbb9d3ef">
-<h2 id="orgbb9d3ef">Overview</h2>
+<section id="slide-orgde224a6">
+<h2 id="orgde224a6">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Lucas Nahas Martinez and Thomas Paterson</li>
@@ -148,8 +148,8 @@ course.
 </section>
 </section>
 <section>
-<section id="slide-org091df06">
-<h2 id="org091df06">Components of assessment</h2>
+<section id="slide-org8720ba9">
+<h2 id="org8720ba9">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -254,8 +254,8 @@ half of semester 2.
 </section>
 </section>
 <section>
-<section id="slide-orgb4b7112">
-<h2 id="orgb4b7112">Format</h2>
+<section id="slide-orgc7e34d8">
+<h2 id="orgc7e34d8">Format</h2>
 <ul>
 <li>tutorial worksheets
 <ul>
@@ -364,8 +364,8 @@ able to use these tools you have developed in your further career.
 </section>
 </section>
 <section>
-<section id="slide-orgb904c90">
-<h2 id="orgb904c90">Prerequisites</h2>
+<section id="slide-orgb15c0cf">
+<h2 id="orgb15c0cf">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -420,8 +420,8 @@ that you are confident that you understand them thoroughly.
 </section>
 </section>
 <section>
-<section id="slide-org0f19d3a">
-<h2 id="org0f19d3a">Key learning objectives</h2>
+<section id="slide-org0d50ab5">
+<h2 id="org0d50ab5">Key learning objectives</h2>
 <ul>
 <li>Mathematics</li>
 <li>Programming with Python</li>
@@ -491,8 +491,8 @@ those tools and interpreting the results.
 </section>
 </section>
 <section>
-<section id="slide-org6b81f57">
-<h2 id="org6b81f57">Balances</h2>
+<section id="slide-orgba8f07d">
+<h2 id="orgba8f07d">Balances</h2>
 <div>
 \begin{align*}
 {\rm accumulation} &= {\rm in~flow} - {\rm out~flow} + {\rm generation}
@@ -524,8 +524,8 @@ and
 </section>
 </section>
 <section>
-<section id="slide-orgda2de1a">
-<h2 id="orgda2de1a">Calculus</h2>
+<section id="slide-org71f52a3">
+<h2 id="org71f52a3">Calculus</h2>
 <ul>
 <li>differentiation</li>
 <li>integration</li>
@@ -542,19 +542,30 @@ f(b) - f(a)
 </div>
 
 </section>
+<section id="slide-org599af6b">
+<h3 id="org599af6b">review question:</h3>
+<ul>
+<li>Integrate:  \(x \sin x\)</li>
+
+</ul>
+
+
+
+
+</section>
 </section>
 <section>
-<section id="slide-org45b0daf">
-<h2 id="org45b0daf">Python programming</h2>
+<section id="slide-org372f2fa">
+<h2 id="org372f2fa">Python programming</h2>
 
-<div id="org580c399" class="figure">
+<div id="org567f749" class="figure">
 <p><img src="./intro/side1half.jpg" alt="side1half.jpg" />
 </p>
 </div>
 
 <div class="column" style="float:left; width:30%">
 
-<div id="org0f15b65" class="figure">
+<div id="org32f6360" class="figure">
 <p><img src="./intro/casio_350_calculator_1512286180_ab688b83.jpg" alt="casio_350_calculator_1512286180_ab688b83.jpg" height="400" />
 </p>
 </div>
@@ -562,7 +573,7 @@ f(b) - f(a)
 
 <div class="column" style="float:right; width:70%">
 
-<div id="org71bdabd" class="figure">
+<div id="org2342db7" class="figure">
 <p><img src="./intro/code_cell.png" alt="code_cell.png" height="400" />
 </p>
 </div>
@@ -587,8 +598,8 @@ f(b) - f(a)
 </aside>
 
 </section>
-<section id="slide-org9b63820">
-<h3 id="org9b63820">Python as a calculator</h3>
+<section id="slide-org166ffb9">
+<h3 id="org166ffb9">Python as a calculator</h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_calculator.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_calculator.ipynb">colab</a>.
 </p>
@@ -610,8 +621,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org23fbc15">
-<h3 id="org23fbc15">Example using variables</h3>
+<section id="slide-org0defabe">
+<h3 id="org0defabe">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -626,13 +637,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org18c309a">
-<h3 id="org18c309a">Variables: Numbers and strings</h3>
+<section id="slide-org928aa7d">
+<h3 id="org928aa7d">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org821a33f">
-<h3 id="org821a33f">Variables: Lists</h3>
+<section id="slide-org05fcbea">
+<h3 id="org05fcbea">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -640,15 +651,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org06b287b">
-<h3 id="org06b287b">Variables: Dictionaries</h3>
+<section id="slide-org7ef9d2e">
+<h3 id="org7ef9d2e">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-orgce88577">
-<h3 id="orgce88577">Example using dictionaries</h3>
+<section id="slide-orgb1425b0">
+<h3 id="orgb1425b0">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -656,8 +667,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-orgbdfd9c0">
-<h3 id="orgbdfd9c0">More advanced use of dictionaries</h3>
+<section id="slide-org86f79f1">
+<h3 id="org86f79f1">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31008&amp;code=cT~vNz0yrmdyodcJPeOFPCWsuvO7OEQ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -665,8 +676,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orge91c39b">
-<h2 id="orge91c39b">Schedule</h2>
+<section id="slide-org83f6022">
+<h2 id="org83f6022">Schedule</h2>
 <ul>
 <li>Weeks 1-2: Python and its applications</li>
 <li>Weeks 3-5: Differential balances</li>
@@ -730,8 +741,8 @@ will be held on the Wednesday of week 11.
 </section>
 </section>
 <section>
-<section id="slide-org84557fa">
-<h2 id="org84557fa">Useful links</h2>
+<section id="slide-org071d53d">
+<h2 id="org071d53d">Useful links</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a>
 <ul>
@@ -773,8 +784,8 @@ whole.
 </section>
 </section>
 <section>
-<section id="slide-orgeea2f45">
-<h2 id="orgeea2f45">Additional resources</h2>
+<section id="slide-org9397099">
+<h2 id="org9397099">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
@@ -839,8 +850,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-orgf75b85b">
-<h2 id="orgf75b85b">Questions?</h2>
+<section id="slide-orgc1309dc">
+<h2 id="orgc1309dc">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
