updates to introduction slide

--- a/slides/intro_notes-2023.html
+++ b/slides/intro_notes-2023.html
@@ -38,8 +38,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org5877788">
-<h2 id="org5877788">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org7fb521f">
+<h2 id="org7fb521f">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -65,8 +65,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-orgde224a6">
-<h2 id="orgde224a6">Overview</h2>
+<section id="slide-org25d49a4">
+<h2 id="org25d49a4">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Lucas Nahas Martinez and Thomas Paterson</li>
@@ -148,8 +148,8 @@ course.
 </section>
 </section>
 <section>
-<section id="slide-org8720ba9">
-<h2 id="org8720ba9">Components of assessment</h2>
+<section id="slide-orgaa49f05">
+<h2 id="orgaa49f05">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -254,8 +254,8 @@ half of semester 2.
 </section>
 </section>
 <section>
-<section id="slide-orgc7e34d8">
-<h2 id="orgc7e34d8">Format</h2>
+<section id="slide-org0236b7a">
+<h2 id="org0236b7a">Format</h2>
 <ul>
 <li>tutorial worksheets
 <ul>
@@ -364,8 +364,8 @@ able to use these tools you have developed in your further career.
 </section>
 </section>
 <section>
-<section id="slide-orgb15c0cf">
-<h2 id="orgb15c0cf">Prerequisites</h2>
+<section id="slide-orgfe742c2">
+<h2 id="orgfe742c2">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -420,8 +420,8 @@ that you are confident that you understand them thoroughly.
 </section>
 </section>
 <section>
-<section id="slide-org0d50ab5">
-<h2 id="org0d50ab5">Key learning objectives</h2>
+<section id="slide-org392ed2e">
+<h2 id="org392ed2e">Key learning objectives</h2>
 <ul>
 <li>Mathematics</li>
 <li>Programming with Python</li>
@@ -491,8 +491,8 @@ those tools and interpreting the results.
 </section>
 </section>
 <section>
-<section id="slide-orgba8f07d">
-<h2 id="orgba8f07d">Balances</h2>
+<section id="slide-org78e0534">
+<h2 id="org78e0534">Balances</h2>
 <div>
 \begin{align*}
 {\rm accumulation} &= {\rm in~flow} - {\rm out~flow} + {\rm generation}
@@ -524,8 +524,8 @@ and
 </section>
 </section>
 <section>
-<section id="slide-org71f52a3">
-<h2 id="org71f52a3">Calculus</h2>
+<section id="slide-org2b240b3">
+<h2 id="org2b240b3">Calculus</h2>
 <ul>
 <li>differentiation</li>
 <li>integration</li>
@@ -541,31 +541,69 @@ f(b) - f(a)
 
 </div>
 
+
 </section>
-<section id="slide-org599af6b">
-<h3 id="org599af6b">review question:</h3>
-<ul>
-<li>Integrate:  \(x \sin x\)</li>
+<section id="slide-org970716d">
+<h3 id="org970716d">review question:</h3>
+<p>
+Integrate:
+</p>
 
-</ul>
+<div>
+\begin{align*}
+I &= \int dx\, x e^{-a x^2}
+\end{align*}
+
+</div>
 
 
+</section>
+<section id="slide-org9f7e948">
+<h3 id="org9f7e948">review question:</h3>
+<p>
+Integrate:
+</p>
+
+<div>
+\begin{align*}
+I &= \int dx\,x \sin x
+\end{align*}
+
+</div>
+
+
+
+
+
+</section>
+<section id="slide-org5d56a99">
+<h3 id="org5d56a99">review question:</h3>
+<p>
+Integrate:
+</p>
+
+<div>
+\begin{align*}
+I &= \int dx\,x^2 e^{-x} \sin x
+\end{align*}
+
+</div>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org372f2fa">
-<h2 id="org372f2fa">Python programming</h2>
+<section id="slide-org671722f">
+<h2 id="org671722f">Python programming</h2>
 
-<div id="org567f749" class="figure">
+<div id="orgd6dec5a" class="figure">
 <p><img src="./intro/side1half.jpg" alt="side1half.jpg" />
 </p>
 </div>
 
 <div class="column" style="float:left; width:30%">
 
-<div id="org32f6360" class="figure">
+<div id="orgfacb8dd" class="figure">
 <p><img src="./intro/casio_350_calculator_1512286180_ab688b83.jpg" alt="casio_350_calculator_1512286180_ab688b83.jpg" height="400" />
 </p>
 </div>
@@ -573,7 +611,7 @@ f(b) - f(a)
 
 <div class="column" style="float:right; width:70%">
 
-<div id="org2342db7" class="figure">
+<div id="orga2b0116" class="figure">
 <p><img src="./intro/code_cell.png" alt="code_cell.png" height="400" />
 </p>
 </div>
@@ -598,8 +636,8 @@ f(b) - f(a)
 </aside>
 
 </section>
-<section id="slide-org166ffb9">
-<h3 id="org166ffb9">Python as a calculator</h3>
+<section id="slide-org0bbccc6">
+<h3 id="org0bbccc6">Python as a calculator</h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_calculator.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_calculator.ipynb">colab</a>.
 </p>
@@ -621,8 +659,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org0defabe">
-<h3 id="org0defabe">Example using variables</h3>
+<section id="slide-org2ef4e8f">
+<h3 id="org2ef4e8f">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -637,13 +675,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org928aa7d">
-<h3 id="org928aa7d">Variables: Numbers and strings</h3>
+<section id="slide-org6fbd27e">
+<h3 id="org6fbd27e">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org05fcbea">
-<h3 id="org05fcbea">Variables: Lists</h3>
+<section id="slide-orgdd3ce25">
+<h3 id="orgdd3ce25">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -651,15 +689,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org7ef9d2e">
-<h3 id="org7ef9d2e">Variables: Dictionaries</h3>
+<section id="slide-org34bd71a">
+<h3 id="org34bd71a">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-orgb1425b0">
-<h3 id="orgb1425b0">Example using dictionaries</h3>
+<section id="slide-org9961d48">
+<h3 id="org9961d48">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -667,8 +705,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org86f79f1">
-<h3 id="org86f79f1">More advanced use of dictionaries</h3>
+<section id="slide-org67a885d">
+<h3 id="org67a885d">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31008&amp;code=cT~vNz0yrmdyodcJPeOFPCWsuvO7OEQ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -676,8 +714,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org83f6022">
-<h2 id="org83f6022">Schedule</h2>
+<section id="slide-orgc7b381c">
+<h2 id="orgc7b381c">Schedule</h2>
 <ul>
 <li>Weeks 1-2: Python and its applications</li>
 <li>Weeks 3-5: Differential balances</li>
@@ -741,8 +779,8 @@ will be held on the Wednesday of week 11.
 </section>
 </section>
 <section>
-<section id="slide-org071d53d">
-<h2 id="org071d53d">Useful links</h2>
+<section id="slide-org6d4d5c7">
+<h2 id="org6d4d5c7">Useful links</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a>
 <ul>
@@ -784,8 +822,8 @@ whole.
 </section>
 </section>
 <section>
-<section id="slide-org9397099">
-<h2 id="org9397099">Additional resources</h2>
+<section id="slide-org80ef520">
+<h2 id="org80ef520">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
@@ -850,8 +888,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-orgc1309dc">
-<h2 id="orgc1309dc">Questions?</h2>
+<section id="slide-orge0da4b0">
+<h2 id="orge0da4b0">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
